# conatus_engine

./: .gitignore  README.md  pyproject.toml
conatus_engine/: __init__.py  __main__.py  affect_catalog.py  affect_rules.py  cli.py  diary_analyzer.py  engine.py  gui_app.py  gui_services.py  models.py  pricing.py  serialization.py  usage_store.py
conatus_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
conatus_engine/data/: __init__.py  model_pricing.json
conatus_engine/ui/: main_window.py
docs/: affect_catalog_audit.md
scripts/: compare_analysis_stability.py
tests/: test_affect_catalog.py  test_affect_rule_fixtures.py  test_cli.py  test_diary_analyzer.py  test_engine.py  test_gui.py  test_models.py  test_pricing.py  test_serialization.py  test_usage_store.py
