[project]
name = "conatus-engine"
version = "0.4.0"
description = "A desktop and command-line study project translating concepts from Spinoza's Ethics Part III into Python models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.0",
    "pydantic>=2.0",
    "PySide6>=6.7",
    "keyring>=25.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
conatus-engine = "conatus_engine.gui_app:main"
conatus-engine-cli = "conatus_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
